# rp2040_ov2640_ili9341

./: .gitignore  .gitmodules  CMakeLists.txt  RPE_minimal.c  Readme.md  analyze.py  blink.c  board_config.h  convert.py  display_main.c  esa_logo.c  firmware.c  framecapture.c  gui.c  gui.h  host.py  img.h  jpeg_capture_sd.c  main.c  main.h  reset.cfg  rotary_encoder.c  sd_config.c  test.c  test_sdcard.c  util.c  util.h
lib/: CMakeLists.txt
lib/ili9341/: ili9341.c  ili9341.h
lib/ov2640/: CMakeLists.txt  image.pio  ov2640.c  ov2640.h  ov2640_init.h  ov2640_regs.h  sensor.h
lib/tjpgd/: CMakeLists.txt  tjpgd.c
